--- a/GeekShopping.Web/appsettings.json
+++ b/GeekShopping.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProdyctAPI": "httpd://localhost:4440",
-    "IdentityServer": "httpd://localhost:4435"
+    "ProductAPI": "https://localhost:4440",
+    "IdentityServer": "https://localhost:4435"
   }
 }
